--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,32 @@ p {
   -webkit-animation: slit-in-vertical 0.45s ease-out both;
   animation: slit-in-vertical 0.45s ease-out both;
 }
+.step-display-container {
+  /* width: 250px; */
+  diplay: flex;
+}
+.step-display {
+  font-weight: 700;
+  padding: 16px 32px;
+  width: auto;
+  font-size: 14px;
+  display: block;
+  box-shadow: 0 2px 6px 0 #b5bbc5;
+  border-radius: 12px;
+  border: none;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.step-display-row {
+  display: flex;
+  flex-direction: row;
+}
 
 @-webkit-keyframes slit-in-vertical {
   0% {
